kubernetes/apps/base/litellm/network.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all-except-namespace
  namespace: litellm
spec:
  description: "Allow traffic only to the namespace itself"
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": litellm
  ingress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnpg-cluster
  namespace: litellm
spec:
  description: "Allow CloudNativePG pods access"
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: litellm-cluster
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: litellm
            cnpg.io/cluster: litellm-cluster
      toPorts:
        - ports:
            - port: postgresql
              protocol: TCP
            - port: status
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: litellm
            app.kubernetes.io/name: litellm
      toPorts:
        - ports:
            - port: postgresql
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dragonfly-egress
  namespace: litellm
spec:
  description: "Allow egress to centralized Dragonfly (dragonfly namespace)"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: litellm
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: dragonfly
            app.kubernetes.io/part-of: dragonfly
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: litellm-server
  namespace: litellm
spec:
  description: "Allow traffic from and to litellm server"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: litellm
      app.kubernetes.io/instance: litellm
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": envoy
            app.kubernetes.io/name: envoy
      toPorts:
        - ports:
            - port: "4000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": pangolin
            app.kubernetes.io/name: pangolin
            app.kubernetes.io/component: newt
      toPorts:
        - ports:
            - port: "4000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: openwebui
            app.kubernetes.io/name: openwebui
      toPorts:
        - ports:
            - port: "4000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: n8n
            app.kubernetes.io/instance: n8n
            app.kubernetes.io/name: n8n
      toPorts:
        - ports:
            - port: "4000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: paperless
            app.kubernetes.io/instance: paperless
            app.kubernetes.io/name: paperless
      toPorts:
        - ports:
            - port: "4000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: alloy
      toPorts:
        - ports:
            - port: "4000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: sure
            app.kubernetes.io/name: sure
      toPorts:
        - ports:
            - port: "4000"
              protocol: TCP
  egress:
    - toEntities:
        - world
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: searxng
            app.kubernetes.io/instance: searxng
            app.kubernetes.io/name: searxng
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: maddy
            app.kubernetes.io/name: maddy
            app.kubernetes.io/instance: maddy
      toPorts:
        - ports:
            - port: smtp
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: toolhive
            app: mcpserver
        - matchLabels:
            io.kubernetes.pod.namespace: toolhive
            app: mcpremoteproxy
